# C17_demo_project

./: EXAMHTLM.py  Example.html
C17_demo_project/: pyproject.toml
C17_demo_project/Testss/: conftest.py  test_activity.py  test_activity7.py  test_sample.py  test_sec.py
C17_demo_project/testfixtures/: test_1.py
Demo/: Sample1.py  SampleByXpaths.py  Testasiggment.py  sample menonite  scrollactivity.html  scrollactivity.py  test.html  test.py  test_file_.py
DemoDir/: ExamAutoma.py
